fixed shadows overlapping

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -62,7 +62,7 @@ a {
 	z-index: -1;
 	top: 80%;
 	bottom: 7px;
-	left: 0.5%;
+	left: 0.8%;
 	width: 50%;
 	max-width: 300px;
 	background: rgba(0, 0, 0, 0.3);
@@ -79,7 +79,7 @@ a {
 }
 
 .curve:after {
-	right: 0.6%;
+	right: 0.8%;
 	left: auto;
 	-webkit-transform:rotate(3deg);
 	-moz-transform:rotate(3deg);
